# OmniParser

./: .gitignore  README.md  analyzer.py  api.py  client.py  main.py  mcp.py  pyproject.toml  test_import.py
utils/: label.py  ocr.py
