[project]
name = "omniparser"
version = "0.1.0"
description = ""
authors = [
    {name = "andy.kukzj",email = "andy.kukzj@finpoints.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi-mcp (>=0.4.0,<0.5.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "easyocr (==1.7.2)",
    "numpy (==1.26.4)",
    "supervision (==0.18.0)",
    "ultralytics (==8.3.70)",
    "paddleocr (>=2.7.0,<3.0.0)",
    "paddlepaddle (>=2.6.0,<3.0.0)",
    "huggingface-hub (>=0.34.4,<0.35.0)",
    "transformers (>=4.38.0,<4.40.0)",
    "einops (==0.8.0)",
    "torch (>=2.1.0,<2.3.0)",
    "torchvision (>=0.16.0,<0.18.0)",
    "openai (>=1.3.5,<2.0.0)",
    "azure-identity (>=1.19.0,<2.0.0)",
    "opencv-python (>=4.10.0,<5.0.0)",
    "opencv-python-headless (>=4.10.0,<5.0.0)",
    "gradio (>=5.10.0,<6.0.0)",
    "dill (>=0.3.9,<1.0.0)",
    "accelerate (>=0.27.0,<0.29.0)",
    "timm (>=1.0.13,<2.0.0)",
    "anthropic (>=0.37.1,<1.0.0)",
    "jsonschema (==4.22.0)",
    "boto3 (>=1.28.57,<2.0.0)",
    "google-auth (>=2.0.0,<3.0.0)",
    "screeninfo (>=0.8.1,<1.0.0)",
    "uiautomation (>=2.0.19,<3.0.0)",
    "dashscope (>=1.22.1,<2.0.0)",
    "groq (>=0.15.0,<1.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.group.dev.dependencies]
ruff = "==0.6.7"
pre-commit = "==3.8.0"
pytest = "==8.3.3"
pytest-asyncio = "==0.23.6"
pyautogui = "==0.9.54"
streamlit = ">=1.38.0"